Removed buttons that are no longer supported with api and fixed button wrapping

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -88,3 +88,12 @@
     max-width: 30%;
     margin-right: 10px;
 }
+
+.button-group-wrapper {
+    display: inline-grid;
+    text-align: center;
+}
+
+.genre-section {
+    display: grid;
+}
